--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   color: #025a6e;
   background-color: #d8f0f2;
   line-height: 100%;
+  font-size: 1.2em;
 }
 header {
   display: flex;
@@ -20,14 +21,14 @@ header {
   height: 10em;
   margin: 10px;
 }
-section {
+.content-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-h1 {
-  margin: 0;
+h1, h2, h3, h4{
+  margin: 5px 0px 10px 0px;
 }
 .about-me {
   display: flex;
@@ -51,7 +52,7 @@ a {
 .special-logo {
   display: flex;
   border: 5px solid;
-  width: 10em;
+  width: 8em;
   justify-content: space-evenly;
 }
 .special-logo-content {
@@ -60,7 +61,7 @@ a {
 .box {
   display: flex;
   align-items: center;
-  margin: 10px;
+  margin: 25px;
   padding: 5px;
   width: 55vw;
   background-color: antiquewhite;
@@ -75,9 +76,10 @@ a {
   width: 30vw;
 }
 .isi {
-  padding: 5px;
+  padding: 12px;
   width: 75vw;
   box-sizing: border-box;
+  text-align:justify;  
 }
 .portfolio{
   display: flex;
@@ -85,9 +87,9 @@ a {
   align-content: space-between;
 }
 .isi img{
-  width: 10em;
-  height: 10em;
-  border-radius: 5px;
+  width: 8em;
+  height: 8em;
+  border-radius: 15px;
   flex-direction: column;
   margin: 5px;
 }
@@ -111,7 +113,8 @@ input[type=text], select {
 textarea {
   width: 95%;
   height: 120px;
-  padding: 12px 20px;
+  padding: 12px 0px;
+  margin: 8px 0;
   box-sizing: border-box;
   border: 2px solid #025a6e;
   border-radius: 4px;
@@ -122,7 +125,7 @@ input[type=submit] {
   background-color: #025a6e;
   color: #d8f0f2;
   padding: 10px 20px;
-  margin: 10px 0;
+  margin: 0px 0px 10px 0px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
